Fixed alignments in popup view

--- a/AdAlyzerExtension/css/popup_style.css
+++ b/AdAlyzerExtension/css/popup_style.css
@@ -2,11 +2,29 @@
 
 div#title {
   font-size: 150%;
+  padding: 10px;
 }
 
 div#container {
   width: 400px;
   height: 400px;
+}
+
+.flexContainer {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.flexItemLeft {
+  flex-basis: 35%;
+  margin: 5px;
+}
+
+.flexItemRight {
+  flex-basis: 55%;
+  margin: 5px;
+  text-align: center;
 }
 
 .coloredBg {
